--- a/dev_env/evaluation.ipynb
+++ b/dev_env/evaluation.ipynb
@@ -12,7 +12,6 @@
    "outputs": [],
    "source": [
     "# 🎯 MODEL EVALUATION SCRIPT \n",
-    "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
     "import pandas as pd\n",
@@ -21,10 +20,12 @@
     "import sys\n",
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, DoubleType, TimestampType\n",
+    "from delta.tables import DeltaTable\n",
     "from typing import Dict, List\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🎯 MODEL EVALUATION PIPELINE — LOG ONLY (NO REGISTRATION)\")\n",
+    "print(\"🎯 MODEL EVALUATION PIPELINE — UNIQUE ENTRIES ONLY\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# -------------------------\n",
@@ -92,23 +93,58 @@
     "\n",
     "\n",
     "# -------------------------\n",
-    "# 🆕 AUTO TABLE CREATION LOGIC (UNCHANGED)\n",
+    "# TABLE SCHEMA DEFINITION\n",
     "# -------------------------\n",
     "\n",
-    "def ensure_table_exists(table_name: str, df_schema, spark):\n",
-    "    \"\"\"Create evaluation delta table automatically if not exists.\"\"\"\n",
+    "def get_evaluation_table_schema():\n",
+    "    \"\"\"Define fixed schema for evaluation log table\"\"\"\n",
+    "    return StructType([\n",
+    "        StructField(\"timestamp\", TimestampType(), True),\n",
+    "        StructField(\"run_id\", StringType(), True),\n",
+    "        StructField(\"run_name\", StringType(), True),\n",
+    "        StructField(\"model_name\", StringType(), True),\n",
+    "        StructField(\"primary_metric\", StringType(), True),\n",
+    "        StructField(\"primary_metric_value\", DoubleType(), True),\n",
+    "        StructField(\"all_metrics_json\", StringType(), True),\n",
+    "        StructField(\"params_json\", StringType(), True),\n",
+    "        StructField(\"model_uri\", StringType(), True)\n",
+    "    ])\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# AUTO TABLE CREATION\n",
+    "# -------------------------\n",
+    "\n",
+    "def ensure_table_exists():\n",
+    "    \"\"\"Create evaluation delta table if not exists\"\"\"\n",
     "    try:\n",
-    "        spark.sql(f\"DESCRIBE TABLE {table_name}\")\n",
-    "        print(f\"📌 Table exists: {table_name}\")\n",
-    "    except Exception:\n",
-    "        print(f\"🆕 Creating new Delta table: {table_name}\")\n",
-    "        (\n",
-    "            spark.createDataFrame([], df_schema)\n",
-    "            .write.format(\"delta\")\n",
-    "            .option(\"overwriteSchema\", \"true\")\n",
-    "            .saveAsTable(table_name)\n",
-    "        )\n",
-    "        print(f\"✅ Table created: {table_name}\")\n",
+    "        spark.sql(f\"DESCRIBE TABLE {config.EVALUATION_LOG_TABLE}\")\n",
+    "        print(f\"📌 Table exists: {config.EVALUATION_LOG_TABLE}\")\n",
+    "    except:\n",
+    "        print(f\"🆕 Creating new Delta table: {config.EVALUATION_LOG_TABLE}\")\n",
+    "        schema = get_evaluation_table_schema()\n",
+    "        empty_df = spark.createDataFrame([], schema)\n",
+    "        empty_df.write.format(\"delta\").option(\"overwriteSchema\", \"true\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
+    "        print(f\"✅ Table created: {config.EVALUATION_LOG_TABLE}\")\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# CHECK IF ALREADY LOGGED\n",
+    "# -------------------------\n",
+    "\n",
+    "def get_existing_run_ids() -> set:\n",
+    "    \"\"\"Get all run_ids already in the evaluation table\"\"\"\n",
+    "    try:\n",
+    "        existing_df = spark.sql(f\"\"\"\n",
+    "            SELECT DISTINCT run_id \n",
+    "            FROM {config.EVALUATION_LOG_TABLE}\n",
+    "        \"\"\")\n",
+    "        existing_ids = set([row.run_id for row in existing_df.collect()])\n",
+    "        print(f\"📊 Found {len(existing_ids)} existing entries in evaluation table\")\n",
+    "        return existing_ids\n",
+    "    except:\n",
+    "        print(\"📊 No existing entries found (new table)\")\n",
+    "        return set()\n",
     "\n",
     "\n",
     "# -------------------------\n",
@@ -130,32 +166,46 @@
     "        print(\"⚠ No model runs found.\")\n",
     "        return []\n",
     "\n",
+    "    # Get existing run_ids to filter out duplicates\n",
+    "    existing_run_ids = get_existing_run_ids()\n",
+    "\n",
     "    run_list = []\n",
+    "    skipped_count = 0\n",
+    "\n",
     "    for run in runs:\n",
-    "        metrics = {m: run.data.metrics.get(m) for m in config.TRACKED_METRICS}\n",
+    "        run_id = run.info.run_id\n",
+    "        \n",
+    "        # 🔥 Skip if already logged\n",
+    "        if run_id in existing_run_ids:\n",
+    "            skipped_count += 1\n",
+    "            continue\n",
+    "\n",
+    "        metrics = {m: run.data.metrics.get(m) for m in config.TRACKED_METRICS if m in run.data.metrics}\n",
     "\n",
     "        run_list.append({\n",
-    "            \"run_id\": run.info.run_id,\n",
-    "            \"run_name\": run.info.run_name,\n",
+    "            \"run_id\": run_id,\n",
+    "            \"run_name\": run.info.run_name or \"unnamed_run\",\n",
     "            \"primary_metric\": run.data.metrics.get(config.PRIMARY_METRIC),\n",
     "            \"all_metrics\": metrics,\n",
     "            \"params\": run.data.params,\n",
-    "            \"model_uri\": f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\",\n",
+    "            \"model_uri\": f\"runs:/{run_id}/{config.ARTIFACT_PATH}\",\n",
     "            \"timestamp\": datetime.fromtimestamp(run.info.start_time / 1000),\n",
     "        })\n",
     "\n",
-    "    print(f\"📌 {len(run_list)} runs fetched and ready for logging.\")\n",
+    "    print(f\"📌 {len(run_list)} NEW runs to log (Skipped {skipped_count} already logged)\")\n",
     "    return run_list\n",
     "\n",
     "\n",
     "# -------------------------\n",
-    "# 4️⃣ Log Evaluation Results (UPDATED WITH MERGE - NO DUPLICATES)\n",
+    "# 4️⃣ Log Evaluation Results (NO DUPLICATES)\n",
     "# -------------------------\n",
     "\n",
-    "from delta.tables import DeltaTable\n",
-    "\n",
     "def log_results(run_list):\n",
-    "    print(\"\\n📝 Logging evaluation results to Delta table...\")\n",
+    "    if not run_list:\n",
+    "        print(\"\\n✅ No new runs to log (all already exist)\")\n",
+    "        return\n",
+    "\n",
+    "    print(f\"\\n📝 Logging {len(run_list)} new evaluation results...\")\n",
     "\n",
     "    records = []\n",
     "    for run in run_list:\n",
@@ -165,33 +215,21 @@
     "            \"run_name\": run[\"run_name\"],\n",
     "            \"model_name\": config.MODEL_NAME,\n",
     "            \"primary_metric\": config.PRIMARY_METRIC,\n",
-    "            \"primary_metric_value\": run[\"primary_metric\"],\n",
+    "            \"primary_metric_value\": float(run[\"primary_metric\"]) if run[\"primary_metric\"] else 0.0,\n",
     "            \"all_metrics_json\": json.dumps(run[\"all_metrics\"]),\n",
     "            \"params_json\": json.dumps(run[\"params\"]),\n",
-    "            \"model_uri\": run[\"model_uri\"],\n",
+    "            \"model_uri\": run[\"model_uri\"]\n",
     "        })\n",
     "\n",
     "    df = pd.DataFrame(records)\n",
-    "    spark_df = spark.createDataFrame(df)\n",
+    "    spark_df = spark.createDataFrame(df, schema=get_evaluation_table_schema())\n",
     "\n",
-    "    ensure_table_exists(config.EVALUATION_LOG_TABLE, spark_df.schema, spark)\n",
-    "\n",
-    "    # 🔁 MERGE LOGIC TO PREVENT DUPLICATE ROWS\n",
     "    try:\n",
-    "        delta = DeltaTable.forName(spark, config.EVALUATION_LOG_TABLE)\n",
-    "\n",
-    "        delta.alias(\"t\").merge(\n",
-    "            spark_df.alias(\"s\"),\n",
-    "            \"t.run_name = s.run_name AND t.model_name = s.model_name\"\n",
-    "        ).whenMatchedUpdateAll().whenNotMatchedInsertAll().execute()\n",
-    "\n",
-    "        print(\"🔁 MERGE successful — duplicate rows avoided.\")\n",
-    "\n",
-    "    except Exception:\n",
+    "        # Append only new records\n",
     "        spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
-    "        print(\"ℹ️ Table not found earlier — appended first-time entries.\")\n",
-    "\n",
-    "    print(\"✅ Evaluation logged successfully.\")\n",
+    "        print(f\"✅ Successfully logged {len(run_list)} new entries\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Failed to log results: {e}\")\n",
     "\n",
     "\n",
     "# -------------------------\n",
@@ -199,9 +237,40 @@
     "# -------------------------\n",
     "\n",
     "def show_summary(run_list):\n",
-    "    print(\"\\n📊 TOP MODEL RESULTS:\\n\")\n",
+    "    if not run_list:\n",
+    "        print(\"\\n📊 No new runs to display\")\n",
+    "        return\n",
+    "\n",
+    "    print(\"\\n📊 NEWLY LOGGED MODEL RESULTS:\\n\")\n",
     "    for rank, run in enumerate(run_list[:10], 1):\n",
-    "        print(f\"{rank}. {run['run_name']} → {config.PRIMARY_METRIC}: {run['primary_metric']:.4f}\")\n",
+    "        pm_val = run['primary_metric']\n",
+    "        print(f\"{rank}. {run['run_name']} → {config.PRIMARY_METRIC}: {pm_val:.4f if pm_val else 0.0}\")\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# 6️⃣ Show All Unique Experiments\n",
+    "# -------------------------\n",
+    "\n",
+    "def show_all_experiments():\n",
+    "    \"\"\"Display all unique experiments in the evaluation table\"\"\"\n",
+    "    print(\"\\n📋 ALL UNIQUE EXPERIMENTS IN EVALUATION TABLE:\\n\")\n",
+    "    \n",
+    "    try:\n",
+    "        all_runs = spark.sql(f\"\"\"\n",
+    "            SELECT DISTINCT run_name, primary_metric_value, timestamp\n",
+    "            FROM {config.EVALUATION_LOG_TABLE}\n",
+    "            ORDER BY primary_metric_value DESC\n",
+    "        \"\"\")\n",
+    "        \n",
+    "        results = all_runs.collect()\n",
+    "        \n",
+    "        for idx, row in enumerate(results, 1):\n",
+    "            print(f\"{idx}. {row.run_name} → {config.PRIMARY_METRIC}: {row.primary_metric_value:.4f}\")\n",
+    "        \n",
+    "        print(f\"\\n📊 Total Unique Experiments: {len(results)}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠ Could not fetch experiments: {e}\")\n",
     "\n",
     "\n",
     "# -------------------------\n",
@@ -209,19 +278,26 @@
     "# -------------------------\n",
     "\n",
     "def main():\n",
+    "    # Ensure table exists\n",
+    "    ensure_table_exists()\n",
+    "    \n",
+    "    # Fetch new runs (excluding already logged)\n",
     "    run_list = get_recent_runs()\n",
-    "    if not run_list:\n",
-    "        print(\"❌ No runs found. Exiting.\")\n",
-    "        return\n",
-    "\n",
+    "    \n",
+    "    # Log new results\n",
     "    log_results(run_list)\n",
+    "    \n",
+    "    # Show summary of newly logged\n",
     "    show_summary(run_list)\n",
+    "    \n",
+    "    # Show all unique experiments\n",
+    "    show_all_experiments()\n",
     "\n",
-    "    print(\"\\n🎉 Evaluation Completed \")\n",
+    "    print(\"\\n🎉 Evaluation Completed Successfully!\")\n",
     "    print(\"=\" * 80)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
