--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# 🎯 MODEL REGISTRATION SCRIPT - FIXED & CONFIG DRIVEN\n",
+    "# 🎯 MODEL REGISTRATION SCRIPT - FIXED (DATA TYPE + DUPLICATE PREVENTION)\n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
@@ -22,8 +22,8 @@
     "from typing import Dict, Optional, List\n",
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, DoubleType, TimestampType, BooleanType\n",
     "import pandas as pd\n",
-    "from delta.tables import DeltaTable\n",
     "\n",
     "print(\"=\" * 80)\n",
     "print(\"🎯 MODEL REGISTRATION SYSTEM - AUTOMATED & DUPLICATE SAFE\")\n",
@@ -104,22 +104,46 @@
     "    raise Exception(f\"Experiment '{config.EXPERIMENT_NAME}' not found!\")\n",
     "\n",
     "\n",
+    "# ---------------------- TABLE SCHEMA (FIXED) ----------------------\n",
+    "def get_table_schema():\n",
+    "    \"\"\"Define fixed schema for registration log table\"\"\"\n",
+    "    return StructType([\n",
+    "        StructField(\"timestamp\", TimestampType(), True),\n",
+    "        StructField(\"run_id\", StringType(), True),\n",
+    "        StructField(\"run_name\", StringType(), True),\n",
+    "        StructField(\"model_name\", StringType(), True),\n",
+    "        StructField(\"primary_metric\", StringType(), True),\n",
+    "        StructField(\"primary_metric_value\", DoubleType(), True),\n",
+    "        StructField(\"metrics_json\", StringType(), True),\n",
+    "        StructField(\"params_json\", StringType(), True),\n",
+    "        StructField(\"registered\", BooleanType(), True),\n",
+    "        StructField(\"registered_version\", StringType(), True),  # 🔥 FIX: Always STRING, never NULL\n",
+    "        StructField(\"reason\", StringType(), True)\n",
+    "    ])\n",
+    "\n",
+    "\n",
     "# ---------------------- TABLE CREATION ----------------------\n",
-    "def ensure_table_exists(table_name: str, df_schema, spark):\n",
+    "def ensure_table_exists():\n",
+    "    \"\"\"Create table if not exists with correct schema\"\"\"\n",
     "    try:\n",
-    "        spark.sql(f\"DESCRIBE TABLE {table_name}\")\n",
-    "        print(f\"📌 Table exists: {table_name}\")\n",
+    "        spark.sql(f\"DESCRIBE TABLE {config.REGISTRATION_LOG_TABLE}\")\n",
+    "        print(f\"📌 Table exists: {config.REGISTRATION_LOG_TABLE}\")\n",
     "    except:\n",
-    "        print(f\"🆕 Creating Delta table: {table_name}\")\n",
-    "        empty_df = spark.createDataFrame([], df_schema)\n",
-    "        empty_df.write.format(\"delta\").option(\"overwriteSchema\", \"true\").saveAsTable(table_name)\n",
-    "        print(f\"✅ Table created: {table_name}\")\n",
+    "        print(f\"🆕 Creating Delta table: {config.REGISTRATION_LOG_TABLE}\")\n",
+    "        schema = get_table_schema()\n",
+    "        empty_df = spark.createDataFrame([], schema)\n",
+    "        empty_df.write.format(\"delta\").option(\"overwriteSchema\", \"true\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
+    "        print(f\"✅ Table created: {config.REGISTRATION_LOG_TABLE}\")\n",
     "\n",
     "\n",
     "# ---------------------- FETCH RUNS ----------------------\n",
     "def get_all_runs() -> List[Dict]:\n",
     "    print(\"\\n📍 Fetching experiment runs...\")\n",
-    "    runs = client.search_runs([experiment.experiment_id], order_by=[f\"metrics.{config.PRIMARY_METRIC} DESC\"], max_results=500)\n",
+    "    runs = client.search_runs(\n",
+    "        [experiment.experiment_id], \n",
+    "        order_by=[f\"metrics.{config.PRIMARY_METRIC} DESC\"], \n",
+    "        max_results=500\n",
+    "    )\n",
     "\n",
     "    return [{\n",
     "        \"run_id\": run.info.run_id,\n",
@@ -133,117 +157,168 @@
     "\n",
     "# ---------------------- DUPLICATE CHECK ----------------------\n",
     "def is_duplicate_model(new_model: Dict) -> bool:\n",
+    "    \"\"\"Check if model already registered\"\"\"\n",
     "    if not config.DUPLICATE_CHECK_ENABLED:\n",
     "        return False\n",
     "\n",
-    "    versions = client.search_model_versions(f\"name='{config.MODEL_NAME}'\")\n",
+    "    try:\n",
+    "        versions = client.search_model_versions(f\"name='{config.MODEL_NAME}'\")\n",
+    "    except:\n",
+    "        return False\n",
     "\n",
     "    for version in versions:\n",
-    "        run = client.get_run(version.run_id)\n",
+    "        try:\n",
+    "            run = client.get_run(version.run_id)\n",
     "\n",
-    "        metrics_match = all(\n",
-    "            abs((run.data.metrics.get(m) or 0) - (new_model[\"metrics\"].get(m) or 0)) <= config.TOLERANCE\n",
-    "            for m in config.METRICS_TO_COMPARE\n",
-    "        )\n",
+    "            metrics_match = all(\n",
+    "                abs((run.data.metrics.get(m) or 0) - (new_model[\"metrics\"].get(m) or 0)) <= config.TOLERANCE\n",
+    "                for m in config.METRICS_TO_COMPARE\n",
+    "            )\n",
     "\n",
-    "        if metrics_match and run.data.params == new_model[\"params\"]:\n",
-    "            print(f\"⚠ Duplicate model = Matches v{version.version}\")\n",
-    "            return True\n",
+    "            if metrics_match and run.data.params == new_model[\"params\"]:\n",
+    "                print(f\"   ⚠ Duplicate detected → Matches v{version.version}\")\n",
+    "                return True\n",
+    "        except:\n",
+    "            continue\n",
     "\n",
     "    return False\n",
     "\n",
     "\n",
+    "# ---------------------- CHECK IF ALREADY LOGGED ----------------------\n",
+    "def is_already_logged(run_id: str) -> bool:\n",
+    "    \"\"\"Check if run_id already exists in registration log table\"\"\"\n",
+    "    try:\n",
+    "        existing = spark.sql(f\"\"\"\n",
+    "            SELECT run_id \n",
+    "            FROM {config.REGISTRATION_LOG_TABLE} \n",
+    "            WHERE run_id = '{run_id}'\n",
+    "            LIMIT 1\n",
+    "        \"\"\").count()\n",
+    "        \n",
+    "        return existing > 0\n",
+    "    except:\n",
+    "        return False\n",
+    "\n",
+    "\n",
     "# ---------------------- REGISTER MODEL ----------------------\n",
     "def register_model(model: Dict):\n",
+    "    \"\"\"Register model to Unity Catalog\"\"\"\n",
     "    if is_duplicate_model(model):\n",
     "        return None\n",
     "\n",
+    "    print(f\"   🔄 Registering model...\")\n",
     "    reg = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
     "    version = reg.version\n",
     "\n",
     "    try:\n",
+    "        # Add tags\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_id\", model[\"run_id\"])\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", str(model[\"primary_metric\"]))\n",
-    "    except:\n",
-    "        pass\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_name\", model[\"run_name\"])\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", config.PRIMARY_METRIC)\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric_value\", str(round(model[\"primary_metric\"], 4)))\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"registered_timestamp\", datetime.now().isoformat())\n",
+    "    except Exception as e:\n",
+    "        print(f\"   ⚠ Failed to set tags: {e}\")\n",
     "\n",
-    "    print(f\"✅ Registered as version: {version}\")\n",
-    "    slack.send(f\"✅ Registered {config.MODEL_NAME} v{version}\", \"success\")\n",
+    "    print(f\"   ✅ Registered as version: {version}\")\n",
     "    return version\n",
     "\n",
     "\n",
-    "# ---------------------- LOGGING DECISION ----------------------\n",
+    "# ---------------------- LOG DECISION ----------------------\n",
     "def log_decision(model, registered, version, reason):\n",
-    "    df = pd.DataFrame([{\n",
+    "    \"\"\"Log registration decision to Delta table\"\"\"\n",
+    "    \n",
+    "    # 🔥 FIX: Check if already logged to prevent duplicates\n",
+    "    if is_already_logged(model[\"run_id\"]):\n",
+    "        print(f\"   ℹ️ Already logged in table, skipping duplicate entry\")\n",
+    "        return\n",
+    "    \n",
+    "    # 🔥 FIX: Convert version to string, use \"N/A\" if None\n",
+    "    version_str = str(version) if version is not None else \"N/A\"\n",
+    "    \n",
+    "    record = {\n",
     "        \"timestamp\": datetime.now(),\n",
     "        \"run_id\": model[\"run_id\"],\n",
     "        \"run_name\": model[\"run_name\"],\n",
     "        \"model_name\": config.MODEL_NAME,\n",
     "        \"primary_metric\": config.PRIMARY_METRIC,\n",
-    "        \"primary_metric_value\": model[\"primary_metric\"],\n",
+    "        \"primary_metric_value\": float(model[\"primary_metric\"]) if model[\"primary_metric\"] else 0.0,\n",
     "        \"metrics_json\": json.dumps(model[\"metrics\"]),\n",
     "        \"params_json\": json.dumps(model[\"params\"]),\n",
     "        \"registered\": registered,\n",
-    "        \"registered_version\": str(version) if version else None,\n",
+    "        \"registered_version\": version_str,  # 🔥 Always string, never None\n",
     "        \"reason\": reason\n",
-    "    }])\n",
+    "    }\n",
     "\n",
-    "    spark_df = spark.createDataFrame(df)\n",
+    "    df = pd.DataFrame([record])\n",
+    "    spark_df = spark.createDataFrame(df, schema=get_table_schema())\n",
     "\n",
-    "    spark_df = spark_df.withColumn(\"registered_version\", spark_df.registered_version.cast(\"string\"))\n",
-    "\n",
-    "    ensure_table_exists(config.REGISTRATION_LOG_TABLE, spark_df.schema, spark)\n",
-    "\n",
-    "    delta = DeltaTable.forName(spark, config.REGISTRATION_LOG_TABLE)\n",
-    "\n",
-    "    delta.alias(\"t\").merge(\n",
-    "        spark_df.alias(\"s\"),\n",
-    "        \"t.run_name = s.run_name AND t.model_name = s.model_name\"\n",
-    "    ).whenMatchedUpdateAll().whenNotMatchedInsertAll().execute()\n",
-    "\n",
-    "    print(\"📄 Logged.\")\n",
+    "    try:\n",
+    "        spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
+    "        print(f\"   📄 Logged to: {config.REGISTRATION_LOG_TABLE}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"   ⚠ Failed to log: {e}\")\n",
     "\n",
     "\n",
     "# ---------------------- MAIN ----------------------\n",
     "def main():\n",
-    "    print(\"\\n🚀 Starting Model Registration...\\n\")\n",
+    "    print(\"\\n🚀 Starting Model Registration Pipeline...\\n\")\n",
+    "\n",
+    "    # Ensure table exists with correct schema\n",
+    "    ensure_table_exists()\n",
     "\n",
     "    runs = get_all_runs()\n",
     "    if not runs:\n",
     "        print(\"❌ No runs found!\")\n",
     "        return\n",
     "\n",
-    "    registered = skipped = 0\n",
-    "\n",
-    "    processed_runs = set()  # 🔥 FEEDBACK FIX\n",
+    "    registered_count = 0\n",
+    "    skipped_count = 0\n",
+    "    processed_run_ids = set()  # 🔥 Track processed runs to avoid duplicates\n",
     "\n",
     "    for idx, model in enumerate(runs, start=1):\n",
-    "\n",
-    "        # Skip duplicate Slack/log execution for same run_id\n",
-    "        if model['run_id'] in processed_runs:\n",
+    "        \n",
+    "        # 🔥 Skip if already processed in this execution\n",
+    "        if model['run_id'] in processed_run_ids:\n",
     "            continue\n",
+    "        \n",
+    "        processed_run_ids.add(model['run_id'])\n",
     "\n",
-    "        processed_runs.add(model['run_id'])\n",
+    "        print(f\"\\n{'='*80}\")\n",
+    "        print(f\"[{idx}/{len(runs)}] Processing: {model['run_name']}\")\n",
+    "        print(f\"   Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']:.4f}\")\n",
+    "        print(f\"{'='*80}\")\n",
     "\n",
-    "        print(f\"\\n{'='*80}\\n[{idx}/{len(runs)}] → {model['run_name']} (Metric: {model['primary_metric']})\")\n",
+    "        # Check if already logged to prevent duplicate entries\n",
+    "        if is_already_logged(model['run_id']):\n",
+    "            print(f\"   ℹ️ Already logged in previous run, skipping...\")\n",
+    "            continue\n",
     "\n",
     "        version = register_model(model)\n",
     "\n",
     "        if version:\n",
-    "            log_decision(model, True, version, \"✔ Registered\")\n",
-    "            registered += 1\n",
+    "            log_decision(model, True, version, \"✔ Registered successfully\")\n",
+    "            slack.send(f\"✅ Registered: {config.MODEL_NAME} v{version}\", \"success\")\n",
+    "            registered_count += 1\n",
     "        else:\n",
-    "            slack.send(f\"⚠ Duplicate Skipped: {model['run_name']}\", \"warning\")\n",
-    "            log_decision(model, False, None, \"⚠ Duplicate Skipped\")\n",
-    "            skipped += 1\n",
+    "            log_decision(model, False, None, \"⚠ Duplicate - Skipped\")\n",
+    "            slack.send(f\"⚠ Duplicate skipped: {model['run_name']}\", \"warning\")\n",
+    "            skipped_count += 1\n",
     "\n",
-    "    print(\"\\n🎉 Completed!\\n\")\n",
-    "    print(f\"✔ Registered: {registered}\")\n",
-    "    print(f\"⚠ Skipped: {skipped}\")\n",
+    "    print(\"\\n\" + \"=\"*80)\n",
+    "    print(\"🎉 REGISTRATION PIPELINE COMPLETED\")\n",
+    "    print(\"=\"*80)\n",
+    "    print(f\"✅ Models Registered: {registered_count}\")\n",
+    "    print(f\"⚠ Duplicates Skipped: {skipped_count}\")\n",
+    "    print(f\"📊 Total Processed: {len(runs)}\")\n",
+    "    print(f\"📦 Model Name: {config.MODEL_NAME}\")\n",
+    "    print(\"=\"*80)\n",
+    "\n",
+    "    slack.send(f\"📁 Registration complete: {registered_count} registered, {skipped_count} skipped\", \"info\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
