--- a/uat_env/uat_inference.ipynb
+++ b/uat_env/uat_inference.ipynb
@@ -301,30 +301,46 @@
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
-    "# STEP 6: STORE RESULTS\n",
+    "# CHECK IF ALREADY LOGGED\n",
+    "# -----------------------------------------------------------------------------------\n",
+    "\n",
+    "def is_version_already_logged(version: str) -> bool:\n",
+    "    \"\"\"Check if this model version already has UAT results\"\"\"\n",
+    "    try:\n",
+    "        existing = spark.sql(f\"\"\"\n",
+    "            SELECT model_version \n",
+    "            FROM {config.UAT_RESULTS_TABLE} \n",
+    "            WHERE model_version = '{version}'\n",
+    "            LIMIT 1\n",
+    "        \"\"\").count()\n",
+    "        return existing > 0\n",
+    "    except:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "# -----------------------------------------------------------------------------------\n",
+    "# STEP 6: STORE RESULTS (NO DUPLICATES)\n",
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def log_results(version, run_id, metrics, status, failed_checks):\n",
     "\n",
     "    print(\"\\n📍 Logging UAT Results into Delta Table...\")\n",
     "\n",
-    "    from delta.tables import DeltaTable\n",
+    "    version_str = str(version)\n",
+    "    \n",
+    "    # 🔥 Check if already logged\n",
+    "    if is_version_already_logged(version_str):\n",
+    "        print(f\"⚠️ UAT results for version {version_str} already exist in table\")\n",
+    "        print(\"   Skipping duplicate entry...\")\n",
+    "        return\n",
     "\n",
-    "    # Cleanup duplicate entries\n",
-    "    try:\n",
-    "        spark.sql(f\"\"\"\n",
-    "        DELETE FROM {config.UAT_RESULTS_TABLE}\n",
-    "        WHERE model_version = '{version}'\n",
-    "        \"\"\")\n",
-    "        print(f\"🧹 Deleted duplicate entries for version {version}\")\n",
-    "    except:\n",
-    "        print(\"ℹ No cleanup needed.\")\n",
+    "    from delta.tables import DeltaTable\n",
     "\n",
     "    result = {\n",
     "        \"timestamp\": datetime.now(),\n",
     "        \"model_name\": config.MODEL_NAME,\n",
     "        \"model_type\": config.MODEL_TYPE,\n",
-    "        \"model_version\": str(version),\n",
+    "        \"model_version\": version_str,\n",
     "        \"run_id\": run_id,\n",
     "        \"uat_status\": status,\n",
     "        \"accuracy\": float(metrics.get(\"accuracy\", 0)),\n",
@@ -341,8 +357,10 @@
     "    try:\n",
     "        DeltaTable.forName(spark, config.UAT_RESULTS_TABLE)\n",
     "        df.write.option(\"mergeSchema\", \"true\").mode(\"append\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
+    "        print(f\"✅ UAT results logged for version {version_str}\")\n",
     "    except:\n",
     "        df.write.mode(\"overwrite\").option(\"overwriteSchema\", \"true\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
+    "        print(f\"✅ UAT results table created and logged for version {version_str}\")\n",
     "\n",
     "    print(\"📌 Results logged successfully.\")\n",
     "\n",
